# rust_android_kotlin_demo

./: .gitignore  Cargo.toml  README.md  uniffi.toml  useful-commands.txt
.cargo/: config.toml
src/: lib.rs
