[package]
name = "math"
version = "0.1.0"
edition = "2021"




[dependencies]
uniffi = { version = "0.28" ,features = [  "cli" ] }

[build-dependencies]
uniffi = { version = "0.28", features = [ "build","cli" ] }

[lib]
crate-type = ["cdylib"]
name = "math"
[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"